added class to back-to-top links; random hyperlinks in paragraphs

--- a/index.html
+++ b/index.html
@@ -26,20 +26,24 @@
             <section id="sec1">
                 <h2>Section 1</h2>
 
-                <p><a href="#top">&uarr; back to top</a></p>
+                <p><a href="#top" class="back-to-top">&uarr; back to top</a></p>
 
                 <p><img src="img/sec1.jpg" alt="a random picture" class="pull-left"/>
-                    Single-origin coffee kitsch Echo Park, shabby chic mlkshk seitan Thundercats drinking vinegar salvia.
+                    Single-origin coffee <a href="https://ischool.uw.edu/">kitsch Echo Park</a>, shabby chic mlkshk
+                    seitan Thundercats drinking <a href="https://ischool.uw.edu/">vinegar salvia</a>.
                     Sriracha wayfarers PBR, 90's viral blog aesthetic.  Distillery Blue Bottle trust fund, sriracha
                     deep v food truck freegan tilde Pinterest Vice American Apparel artisan heirloom.  Flexitarian swag
                     lo-fi viral, mustache 90's before they sold out.  Dreamcatcher locavore biodiesel street art jean
-                    shorts.  Before they sold out tattooed Wes Anderson, flannel bespoke freegan drinking vinegar.
-                    Meggings mustache Wes Anderson art party small batch, kale chips Brooklyn lomo salvia cray.</p>
+                    shorts.  Before they sold out <a href="https://ischool.uw.edu/">tattooed Wes Anderson</a>, flannel
+                    bespoke freegan drinking vinegar. Meggings mustache <a href="https://ischool.uw.edu/">Wes Anderson</a>
+                    art party small batch, kale chips Brooklyn lomo salvia cray.</p>
                 <p>XOXO Kickstarter pork belly tousled mustache.  Blog squid Pitchfork, ennui irony Marfa food truck
-                    gluten-free Williamsburg beard 3 wolf moon letterpress gentrify pop-up keytar.  Small batch Tonx 3
-                    wolf moon, cray Etsy XOXO Tumblr quinoa VHS polaroid asymmetrical.  Odd Future Neutra mixtape,
-                    slow-carb Pitchfork mumblecore food truck dreamcatcher High Life Schlitz.  Street art Tumblr
-                    mustache vegan Neutra umami, quinoa paleo keffiyeh Pitchfork kitsch.  Street art farm-to-table
+                    gluten-free <a href="https://ischool.uw.edu/">Williamsburg</a> beard 3 wolf moon letterpress
+                    gentrify pop-up keytar.  Small batch Tonx 3 wolf moon, cray Etsy
+                    <a href="https://ischool.uw.edu/">XOXO</a> Tumblr quinoa VHS polaroid asymmetrical.  Odd Future
+                    Neutra mixtape, slow-carb Pitchfork mumblecore food truck dreamcatcher High Life
+                    <a href="https://ischool.uw.edu/">Schlitz</a>. Street art Tumblr mustache vegan Neutra umami,
+                    quinoa paleo keffiyeh Pitchfork kitsch.  Street art farm-to-table
                     meggings PBR&B mixtape.  Trust fund Helvetica mixtape jean shorts church-key, banh mi tattooed
                     cornhole.</p>
                 <p>Dreamcatcher salvia skateboard fap disrupt, chia Etsy heirloom fashion axe occupy
@@ -76,7 +80,7 @@
             <section id="sec2">
                 <h2>Section 2</h2>
 
-                <p><a href="#top">&uarr; back to top</a></p>
+                <p><a href="#top" class="back-to-top">&uarr; back to top</a></p>
 
                 <p><img src="img/sec2.jpg" alt="a random picture" class="pull-right"/>
                     Single-origin coffee kitsch Echo Park, shabby chic mlkshk seitan Thundercats drinking vinegar salvia.
@@ -126,7 +130,7 @@
             <section id="sec3">
                 <h2>Section 3</h2>
 
-                <p><a href="#top">&uarr; back to top</a></p>
+                <p><a href="#top" class="back-to-top">&uarr; back to top</a></p>
 
                 <p><img src="img/sec3.jpg" alt="a random picture" class="pull-left"/>
                     Single-origin coffee kitsch Echo Park, shabby chic mlkshk seitan Thundercats drinking vinegar salvia.
@@ -173,7 +177,7 @@
 
                 <p><button class="btn btn-primary" id="exit-button">Get Me Out of Here!</button></p>
 
-                <p><a href="#top">&uarr; back to top</a></p>
+                <p><a href="#top" class="back-to-top">&uarr; back to top</a></p>
 
             </section>
         </main>
