--- a/index.html
+++ b/index.html
@@ -189,16 +189,23 @@
                         <h4 class="modal-title">Are You Sure?</h4>
                     </div>
                     <div class="modal-body">
-                        <p>Are you sure you want to leave? I mean, I worked really hard on this, and now you just
-                            want to leave. Don't you love me?</p>
-                    </div>
+                        <div class="row">
+                            <div class="col-xs-2">
+                                <img src="img/question.png" alt="question icon" class="pull-left"/>
+                            </div>
+                            <div class="col-xs-10">
+                                <p>Are you sure you want to leave? I mean, I worked really hard on this, and now you just
+                                    want to leave. Don't you love me?</p>
+                            </div>
+                        </div>
+                    </div> <!-- /.modal-body -->
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">OK, I'll Stay</button>
                         <button type="button" class="btn btn-primary" id="confirm-exit-button">Let Me Go!</button>
                     </div>
-                </div><!-- /.modal-content -->
-            </div><!-- /.modal-dialog -->
-        </div><!-- /.modal -->
+                </div> <!-- /.modal-content -->
+            </div> <!-- /.modal-dialog -->
+        </div> <!-- /.modal -->
 
 
         <script src="js/app.js"></script>
